[package]
name = "exhume_apfs"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
prettytable-rs = "0.10"
clap = { version = "4", features = ["cargo"] }
clap-num = "1.2"

byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

exhume_body = { path = "../exhume_body" }
