[package]
name = "exhume_apfs"
version = "0.1.4"
edition = "2024"
description = "This exhume module is proposing Apple FileSystem Parsing"
documentation = "https://www.forensicxlab.com/docs/category/exhume---apfs"
authors = ["k1nd0ne"]
license = "GPL-2.0-or-later"

[dependencies]
log = "0.4"
env_logger = "0.11"
prettytable-rs = "0.10"
clap = { version = "4", features = ["cargo"] }
clap-num = "1.2"

byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
exhume_body = "=0.5.3"
#exhume_body = { path = "../exhume_body" }
